--- a/app/src/main/res/layout/fragment_screen_splash.xml
+++ b/app/src/main/res/layout/fragment_screen_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:background="#0094FF"
-    tools:context=".SplashScreen">
+    tools:context=".fragment.ScreenSplashFragment">
 
     <ImageView
         android:id="@+id/imageView8"
