--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
       <color name="acık">#4A52FF</color>
     <color name="a">#0094FF</color>
     <color name="buttonend">#1AAAEB</color>
+    <color name="pink">#FF4593</color>
 
 </resources>
