--- a/app/src/main/res/layout/fragment_wake_up_female.xml
+++ b/app/src/main/res/layout/fragment_wake_up_female.xml
@@ -6,39 +6,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.WakeUpMaleFragment">
+    tools:context=".fragment.WakeUpFemaleFragment">
 
 
     <ImageView
-        android:id="@+id/wakeup"
+        android:id="@+id/wakeup3"
         android:layout_width="214dp"
         android:layout_height="145dp"
         android:layout_marginTop="52dp"
         android:layout_marginBottom="49dp"
-        android:src="@drawable/ic_ellipse2"
-        app:layout_constraintBottom_toBottomOf="@+id/text1"
+        android:src="@drawable/ic_pinkellipse"
+        app:layout_constraintBottom_toBottomOf="@+id/text3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TimePicker
         android:id="@+id/timePicker1"
-  android:background="@drawable/button"
-        android:layout_width="224dp"
-        android:layout_height="132dp"
-        android:layout_marginTop="348dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="160dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/pinkbutton"
         android:timePickerMode="spinner"
-        app:layout_constraintBottom_toTopOf="@+id/nextbutton3"
+        app:layout_constraintBottom_toBottomOf="@+id/imagee"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/wake"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toEndOf="@+id/imagee"
+        app:layout_constraintTop_toTopOf="@+id/imagee">
 
     </TimePicker>
 
     <TextView
-        android:id="@+id/text1"
+        android:id="@+id/text3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
@@ -46,62 +45,33 @@
         android:layout_marginEnd="64dp"
         android:gravity="center"
         android:text="What time do you wake up"
-        android:textColor="#1BAEEE"
+        android:textColor="#FF4593"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/wake"
-        android:layout_width="137dp"
-        android:layout_height="138dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="238dp"
-        android:src="@drawable/ic_male"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timePicker1"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/wakepsayi"
-        android:layout_width="84dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="51dp"
-        android:gravity="center"
-        android:text="Kg"
-        android:textColor="#1BAEEE"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/wake"
-        app:layout_constraintEnd_toEndOf="@+id/text1"
-        app:layout_constraintTop_toTopOf="@+id/text1" />
-
     <Button
         android:id="@+id/nextbutton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="51dp"
+        android:layout_marginEnd="64dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/button"
         android:text="Next"
         android:textSize="24sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.874"
-        app:layout_constraintStart_toEndOf="@+id/back4" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/back4"
+        android:id="@+id/back3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="51dp"
 
-        android:layout_marginBottom="27dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginBottom="26dp"
         android:background="@drawable/button"
         android:drawableLeft="@drawable/left"
         android:textSize="24sp"
@@ -117,8 +87,21 @@
         android:layout_marginTop="17dp"
         android:src="@drawable/ic_saat"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/wakeup" />
+        app:layout_constraintTop_toTopOf="@+id/wakeup3" />
+
+    <ImageView
+        android:id="@+id/imagee"
+        android:layout_width="123dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="149dp"
+        android:src="@drawable/ic_female"
+        app:layout_constraintBottom_toTopOf="@+id/back3"
+        app:layout_constraintEnd_toStartOf="@+id/timePicker1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wakeup3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
