--- a/app/src/main/res/layout/fragment_gender.xml
+++ b/app/src/main/res/layout/fragment_gender.xml
@@ -41,13 +41,14 @@
         android:id="@+id/textView3"
         android:layout_width="62dp"
         android:layout_height="0dp"
+        android:layout_marginStart="92dp"
         android:text="Male"
         android:textColor="#1BAEEE"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/maleButton"
-        app:layout_constraintStart_toStartOf="@+id/maleButton"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView4"
@@ -90,36 +91,34 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ToggleButton
-        android:id="@+id/maleButton"
-        android:layout_width="141dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/clickbutton"
-        android:checked="false"
-        android:text=""
-        android:textOff=""
-        android:textOn=""
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kelime" />
-
-    <ToggleButton
         android:id="@+id/femaleButton"
         android:layout_width="141dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="7dp"
+        android:layout_height="147dp"
 
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="36dp"
         android:background="@drawable/clickpinkbutton"
         android:checked="false"
         android:text=""
         android:textOff=""
         android:textOn=""
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/maleButton" />
+        app:layout_constraintTop_toBottomOf="@+id/kelime" />
+
+    <ToggleButton
+        android:id="@+id/maleButton"
+        android:layout_width="141dp"
+        android:layout_height="147dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/clickbutton"
+        android:checked="false"
+        android:text=""
+        android:textOff=""
+        android:textOn=""
+        app:layout_constraintEnd_toStartOf="@+id/femaleButton"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/kelime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
