--- a/app/src/main/res/layout/fragment_hi.xml
+++ b/app/src/main/res/layout/fragment_hi.xml
@@ -28,14 +28,14 @@
         app:srcCompat="@drawable/ic_su1" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/image"
         android:layout_width="157dp"
         android:layout_height="76dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="340dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_union" />
+        app:srcCompat="@drawable/ic_sag" />
 
     <ImageView
         android:id="@+id/imageView4"
