--- a/app/src/main/res/layout/fragment_goal_water.xml
+++ b/app/src/main/res/layout/fragment_goal_water.xml
@@ -10,12 +10,10 @@
     tools:context=".fragment.GoalWaterFragment">
 
 
-
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:src="@drawable/ic_vector_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -87,7 +85,7 @@
         android:id="@+id/litre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="136dp"
+        android:layout_marginBottom="120dp"
         android:text="0 ml"
         android:textColor="#1BAEEE"
         android:textSize="24sp"
@@ -97,53 +95,29 @@
         app:layout_constraintStart_toStartOf="@+id/imageView15" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="93dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="84dp"
+        android:id="@+id/textView9"
+        android:layout_width="134dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="172dp"
         android:gravity="center"
-        android:text="Daily Goal"
+        android:text="Completed"
+        android:textColor="#0654C6"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView19"
-        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="64dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/imageView19"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="93dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="64dp"
-        android:gravity="center"
-        android:text="Completed"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView15"
-        app:layout_constraintHorizontal_bias="0.095"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <TextView
         android:id="@+id/textView10"
-        android:layout_width="63dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="110dp"
+        android:layout_width="83dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="28dp"
+        android:gravity="center"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/imageView15"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textColor="#0B419E"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
