--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,6 +69,9 @@
         <argument
             android:name="litre"
             app:argType="string" />
+        <action
+            android:id="@+id/action_goalWaterFragment_to_alarmActivity"
+            app:destination="@id/alarmActivity" />
     </fragment>
     <fragment
         android:id="@+id/maleWeightFragment"
@@ -84,4 +87,9 @@
             android:id="@+id/action_maleWeightFragment_to_goalWaterFragment"
             app:destination="@id/goalWaterFragment" />
     </fragment>
+    <activity
+        android:id="@+id/alarmActivity"
+        android:name="com.seda.reminderapp.AlarmActivity"
+        android:label="activity_alarm"
+        tools:layout="@layout/activity_alarm" />
 </navigation>
