--- a/app/src/main/res/layout/fragment_goal_water.xml
+++ b/app/src/main/res/layout/fragment_goal_water.xml
@@ -149,7 +149,7 @@
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/fabalarm"
             app:backgroundTint="@android:color/holo_blue_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
